samples/_failures_safe/1761726923_36f732_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cee00470.c: In function ‘main’:
./samples/SAFE/__tmp_cee00470.c:179:5: error: expected declaration or statement at end of input
  179 |     char input[256];
      |     ^~~~
